--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,11 @@ h1 {
 p {
   text-align: center;
 }
+.card {
+  background-color: rgb(249, 245, 239);
+  height: 100%;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
