--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,16 @@ p {
   height: 100%;
 }
 
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.hornedAnimal {
+  text-align: center;
+}
+
+select.form-select {
+  width: 50vw;
+  margin: auto;
 }
